# InvariantInferenceFramework

./: .gitignore  CMakeLists.txt  Makefile  Makefile.1  README.md  cpp_sh.out  demo_plot.m  ins.cpp  svmplot1.m  test  test.sh
assertion_redefined/: test_with_redefined_assertion.sh
data/: input  lines  points1  points10  points11  points12  points13  points2  points3  points4  points5  points6  points7  points8  points9  sample1  sample10  sample11  sample12  sample13  sample2  sample3  sample4  sample5  sample6  sample7  sample8  sample9  svm2plane.predict  svm2plane.predict_wrong  svmline  svmline_adjust  train  train.model  train.predict  train1_1  train1_10  train1_11  train1_12  train1_13  (+10 more)
demo/: demo.cpp
demo/data/: input  lines  points1
demo/klee/: a.out
dev/: a.out  map_test.cpp  traceprog2.c  tracer
examples/: examples.cpp  header.h  ins3.cpp
examples/cav13cbench/: xy0.c
examples/ex1/: ins_ex1.cpp  out2  out3  out6
examples/f1a/: f1a.cpp  out2  out4
examples/f2/: f2_ins.cpp  out1  out2  out3  out4
examples/pldi08/: pldi08.c
examples/slow_gulv/: out1  out2
history/v1.0/: Makefile  (+1 more)
include/: color.h  config.h  equation.h  header.h  instrumentation.h  ml_algo.h  states.h  svm.h  svm_core.h  svm_i.h  svm_ii.h
src/: a.out  color.cpp  instrumentation.cpp  linearsolver.cpp  main.cpp  markline.cpp  rand2input.cpp  svm.cpp  svm2plane.cpp  svm_core.cpp  svm_i.cpp  train.model
test/: CMakeLists.txt
v1.0/: Makefile
v2.0/: test.sh
v2.0abandon/: covert.cpp
v3.0/: iif.cpp  iif.h  ins2.cpp  main.cpp  model_file  svm.cpp  svm.h  svm_linker.h
(+248 files in other folders)
